alignment isse resolved

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ a:hover{
     font-size: 18px;
     text-align: center;
    }
-#contact{
+#contact-btn{
 padding:7px 9px;
 border-radius:10px;
 font-size: 11px;
